# bigfiles

./: .gitignore  Cargo.toml  future_ideas.md  readme.md  readme.txt
src/: main.rs
