[package]
name = "bigfiles"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }



[profile.dev]
opt-level = 0

[profile.release]
debug = false
opt-level = "z"
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"