[package]
name = "bigfiles"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
socket2 = "0.4"
qr2term = "0.3.1"


[profile.dev]
opt-level = 0

[profile.release]
debug = false
opt-level = "z"
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"